# hyper-static-server

./: .gitignore  0_READ_ME_FIRST.md  CHANGELOG.md  CLAUDE.md  COMPLETION_REPORT.md  Cargo.toml  Cargo.toml.docker  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.dev  INDEX.md  PLANNING.md  README.md  STARTED_HERE.md  TASK.md  deploy.bat  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  quick-start.bat  quick-start.sh
.claude/: PROJECT_SETUP_GUIDE.md  settings.local.json
.claude/rules/: core-rules.md
benches/: latency.rs  throughput.rs
public/: index.html  json-formatter.html
src/: error.rs  lib.rs  main.rs  mime.rs  response.rs  server.rs
src/json_formatter/: display.rs  format.rs  mod.rs  stats.rs
tests/: integration_test.rs
